# bettamind

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  codemagic.yaml  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: phase-1-checks.yml
androidApp/: build.gradle.kts
apps/website/: README.md  astro.config.mjs  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: sync.py
backend/app/core/: settings.py
backend/app/db/: __init__.py  session.py
backend/app/schemas/: sync.py
backend/tests/: test_health.py  test_sync.py
brand/: README.md
docs/architecture/: architecture-decisions.md  local-ai-no-model-fallback.md  module-boundaries.md  system-context.md
docs/design/: brand-and-colour-decision.md  brand-asset-plan.md  font-sources.md  localisation-plan.md  phase-10-localisation-accessibility.md
docs/legal/: model-third-party-notices.md
docs/operations/: litertlm-artifact-build-plan.md  local-ai-model-pack-release.md  manual-owner-checklist.md  model-license-approval-records.md  model-pack-manifest-template.json  model-pack-owner-evidence-template.md  phase-12-release-readiness.md  release-evidence-template.md  testflight-readiness.md  website-cloudflare-pages.md  windows-codemagic-development.md
docs/planning/: assumptions-and-decisions.md  implementation-plan.md  phase-6x-integration-audit.md  (+6 more)
gradle/: libs.versions.toml
scripts/: generate_brand_assets.py
shared/: build.gradle.kts
(+139 files in other folders)
